# Amos-slam

./: CMakeLists.txt  CameraTrajectory.txt  KeyFrameTrajectory.txt  README.md  groundtruth.txt
Examples/Monocular/: mono_euroc  mono_euroc.cc  mono_kitti  mono_kitti.cc  mono_tum  mono_tum.cc
Examples/RGB-D/: Bonn.yaml  realsense.yaml  rgbd_tum  rgbd_tum.cc
Examples/ROS/Stereo/: stereo_euroc.cc
Examples/Stereo/: stereo_euroc  stereo_euroc.cc  stereo_kitti  stereo_kitti.cc
include/: Frame.h  FrameDrawer.h  KeyFrame.h  LK.h  ORBextractor.h  System.h  Tracking.h  cluster.h  yolact.h
src/: Frame.cc  FrameDrawer.cc  LocalMapping.cc  LoopClosing.cc  ORBextractor.cc  ORBmatcher.cc  System.cc  Tracking.cc  Viewer.cc  c++test.cpp  cluster.cc  yolact.cc
src/python/: config.py  eval.py  yolact.py  yolact_interface.py
src/python/data/: config.py
